<resources>
    <string name="app_name">TableFind</string>
    <string name="register_headingText">Register Profile</string>
    <string name="register_email">Enter Email</string>
    <string name="register_FirstName">First Name</string>
    <string name="register_LastName">Last Name</string>
    <string name="register_password">Password</string>
    <string name="register_confirmPassword">Confirm Password</string>
    <string name="register_cellphone">CellPhone Number</string>
    <string name="register_button">Register</string>
    <string name="ToastText">customText</string>
    <string name="loginEmail">Please Enter Email</string>
    <string name="loginPassword">Please Enter Password</string>
    <string name="loginButton">Login</string>
    <string name="toRegisterButton">Register</string>
    <string name="resetPassword">Forgot Password? Reset Here.</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="search_for_restaurants">Search For Restaurants</string>
    <string name="dishDetailName">TextView</string>
    <string name="dishDetailType">TextView</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="dishDetailPrice">TextView</string>
    <string name="dishDetailAllergens">TextView</string>
    <string name="loading_please_wait">Loading...please wait...</string>
    <string name="textview">Restaurants</string>
    <string name="restaurantNameText">Tables</string>
    <string name="tap_here_for_restaurant_in_google_maps">Tap Here for Restaurant in Google Maps</string>
    <string name="check_food_availability">Check Food Availability</string>
    <string name="select_time_slot_for_reservation">SELECT TIME SLOT FOR RESERVATION</string>
    <string name="adding_table">Adding Table...</string>
    <string name="reservationSeating">Seating:</string>
    <string name="reservationInfo">Close to Bathroom</string>
    <string name="textView1">Select a duration below (1-3 Hours)</string>
    <string name="edtReservationDuration">1</string>
    <string name="reserve_table_for">Reserve Table for:</string>
    <string name="adding_reservation">Adding Reservation...</string>
    <string name="adding_table1">Adding Table...</string>
    <string name="loading_please_wait2">Loading...please wait...</string>
    <string name="textView2">User:</string>
    <string name="textView3">Name:</string>
    <string name="receiptUser">N/A</string>
    <string name="textView4">Contact Number:</string>
    <string name="receiptUserNumber">N/A</string>
    <string name="textView5">Email:</string>
    <string name="receiptUserEmail">N/A</string>
    <string name="textView6">Restaurant:</string>
    <string name="textView7">Name:</string>
    <string name="receiptRestaurantName">N/A</string>
    <string name="textView8">Location:</string>
    <string name="receiptRestaurantLocation">N/A</string>
    <string name="textView9">Contact Number:</string>
    <string name="receiptRestaurantNumber">N/A</string>
    <string name="textView10">Reservation:</string>
    <string name="textView11">From:</string>
    <string name="receiptReservationFrom">N/A</string>
    <string name="textView12">To:</string>
    <string name="receiptReservationTo">N/A</string>
    <string name="textView13">Capacity:</string>
    <string name="receiptReservationCapacity">N/A</string>
    <string name="textView14">Table Info:</string>
    <string name="receiptReservationTableInfo">N/A</string>
    <string name="receiptAcceptBtn">Accept</string>
    <string name="export_all_as_pdf">Export all as PDF</string>
    <string name="textView15">Type:</string>
    <string name="textView16">Details:</string>
    <string name="textView17">Price:</string>
    <string name="textView18">Name and Surname:</string>
    <string name="profileName">TextView</string>
    <string name="textView19">Contact Number:</string>
    <string name="profileNumber">TextView</string>
    <string name="textView20">Email::</string>
    <string name="profileEmail">TextView</string>
    <string name="profileReturn">Return</string>
    <string name="profileDeactivate">Deactivate</string>
    <string name="dishInfo">TextView</string>
    <string name="dishAvailable">A</string>
    <string name="receiptInfo">N/A</string>
    <string name="restaurantName">TextView</string>
    <string name="restaurantLocation">TextView</string>
</resources>