<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    app:layout_gravity="center_horizontal|center_vertical"
    tools:context=".activities.Login">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:outlineAmbientShadowColor="@color/colorBackground"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@mipmap/tablefind_foreground" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_email"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPassword"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/register_password"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:hintAnimationEnabled="true"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/keepMeLoggedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:text="@string/keep_me_logged_in"
            android:textColor="@color/colorBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/loginButton"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/toRegisterButton"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/resetPassword"
            android:textColor="#1E49CA"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>