<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".activities.Register">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:outlineAmbientShadowColor="@color/colorBackground"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/register_headingText"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_email"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorError"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorBackground"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_FirstName"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorError"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorBackground"
            app:startIconDrawable="@drawable/name"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_LastName"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorError"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorBackground"
            app:startIconDrawable="@drawable/name"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_password"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorError"
            app:endIconMode="password_toggle"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorBackground"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_confirmPassword"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorError"
            app:endIconMode="password_toggle"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorBackground"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytCellphoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_cellphone"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorError"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:hintTextColor="@color/colorBackground"
            app:startIconDrawable="@drawable/phone"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCellNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/buttons"
            android:paddingStart="10dp"
            android:paddingLeft="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/register_button"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>